# 360Extractor

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  IMPROVEMENTS.md  README.md  TEST_CLI.md  check_env.py  pyproject.toml  requirements.txt  setup_cuda.py
.github/workflows/: ci.yml
docs/: CLI.md  SETTINGS.md
plans/: cli_ai_fix.md
src/: main.py
src/core/: ai_classes.py  ai_model.py  analyzer.py  geometry.py  job.py  processor.py  settings_manager.py  telemetry.py  version.py
src/ui/: collapsible_section.py  icons.py  log_panel.py  main_window.py  preview_widget.py  sidebar.py  styles.qss  toggle_switch.py  video_card.py  widgets.py
src/utils/: camm_parser.py  file_manager.py  gpmf_parser.py  gpx_parser.py  logger.py  srt_parser.py
tests/: test_cli_settings.py  test_core.py  test_gpmf_parser.py  test_migration_yolo11.py  test_migration_yolo26.py  test_parsers.py  verify_layout_toggle.py  verify_selective_cameras.py
