[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "360-extractor-pro"
version = "3.1.0"
description = "Desktop and CLI tool to preprocess 360 and standard video/images into rectilinear datasets for photogrammetry and Gaussian Splatting, with AI operator removal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [{ name = "Nicolas Diolez" }]
keywords = ["360", "photogrammetry", "gaussian-splatting", "equirectangular", "yolo"]

dependencies = [
    "PySide6>=6.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.4.14",
    "tqdm>=4.66.0",
    "piexif>=1.1.3",
    "defusedxml>=0.7.1",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# Install GPU PyTorch separately, e.g.:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
gpu = ["torch", "torchvision"]
dev = ["pytest>=7.0", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
"360extractor" = "main:main"

[project.urls]
Homepage = "https://github.com/nicolasdiolez/360Extractor"
Changelog = "https://github.com/nicolasdiolez/360Extractor/blob/main/CHANGELOG.md"

# Flat "src" layout: modules live directly under src/ (core, ui, utils, main).
[tool.setuptools]
package-dir = { "" = "src" }
# main.py is a top-level module (the console entry point), not a package.
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core*", "ui*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative baseline: catch real bugs (pyflakes + syntax errors) without
# enforcing the full style guide on the existing codebase. Style rules
# (whitespace, line length, one-line ifs) are intentionally left out for now.
select = ["E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic: the codebase is only partially typed. Keep mypy informational.
check_untyped_defs = false
warn_unused_ignores = true
exclude = ["build/", "dist/"]
